--- a/learnyaml.yaml
+++ b/learnyaml.yaml
@@ -90,8 +90,8 @@ block_keep: >+
 
 # Nesting uses indentation. 2 space indent is preferred (but not required).
 a_nested_map:
-  key: value
-  another_key: Another Value
+  kb by: value
+  a  nother_key: Another Value
   another_nested_map:
     hello: hello
 
